# IDS-Beta

./: FailedLockScreenMessage.txt  README.md  codes.txt  lockscreen.txt  main.py  pyproject.toml  syscrash.py
apps/: calculator.py  encryptednotes.py  search.py  unencryptednotes.py
apps/encryptionapps/: filecheck.py  hashing.py  pgp.py  steganography.py  textenc.py
apps/games/: darkcastle.py
osapps/: attest.py  attestation.py  filesaaa.py
privacyguides/: Surveillance Self-Defense _ Tips, Tools and How-tos for Safer Online Communications.mhtml  Two-factor authentication for beginners.mhtml
