[tool.poetry]
name = "illumatemap"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
pycryptodomex = "^3.10.1"
replit = "^3.0.0"
pypng = "^0.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
